# PWR

./: README.md
3 SEM/Metody Probabilistyczne i Statystyka/Homework2/: main.cpp  utils.cpp  utils.hpp
3 SEM/Metody Probabilistyczne i Statystyka/Homework3/zad1/: CMakeLists.txt
3 SEM/Metody Probabilistyczne i Statystyka/Homework3/zad1/cpp/include/: utils.hpp
3 SEM/Metody Probabilistyczne i Statystyka/Homework3/zad1/cpp/main/: main.cpp
3 SEM/Metody Probabilistyczne i Statystyka/Homework3/zad1/cpp/src/: utils.cpp
3 SEM/Metody Probabilistyczne i Statystyka/Homework3/zad2/: CMakeLists.txt  zad2.cpp
3 SEM/Metody Probabilistyczne i Statystyka/Homework3/zad3/: CMakeLists.txt  zad3.cpp
3 SEM/Metody Probabilistyczne i Statystyka/Homework4/zad1/: zadanie1.py
3 SEM/Metody Probabilistyczne i Statystyka/Homework4/zad2/: zadanie2.py
3 SEM/Metody Probabilistyczne i Statystyka/Homework4/zad3/: zadanie3.py
3 SEM/Metody Probabilistyczne i Statystyka/homework1/: monte_carlo_experiment.py
3 SEM/Systemy Operacyjne/lista2/: boot.c  hello_colors.c  to_lowercase.sh
3 SEM/Systemy Operacyjne/lista3/: api_script.sh  expr.c  monitor.sh  process_info.sh
3 SEM/Systemy Operacyjne/lista4/: kill.c  lsh2.c  root_shell.c  signal.c  signal_test.c
3 SEM/Systemy Operacyjne/lista5/: sum.asm  zad3.asm  zad4.asm
3 SEM/Systemy Operacyjne/lista6/: 0001-lista6.patch
3 SEM/Technologie Programowania/BookRentalSystem/: pom.xml
4 SEM/WWW/lista1/: index.html  o-mnie.html  projekty.html
4 SEM/WWW/lista1/css/: style.css
4SEM/AI/: mnist_model.h5
4SEM/AI/lista1/MNIST_DL/: README.md  myset_test.py  test_model.py  train_model.py
4SEM/AI/lista1/MNIST_RFC/: README.md  test_model.py  train_model.py
4SEM/WWW/lista1/: index.html  kontakt.html  o-mnie.html  projekty.html
Algorytmy i Struktury Danych/lista1/zad1/: fifo.cpp  lifo.cpp
(+3 files in other folders)
